--- a/index.html
+++ b/index.html
@@ -1,359 +1,176 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>🌌 밤하늘 별편지</title>
-<style>
-  body {
-    margin: 0;
-    overflow: hidden;
-    height: 100vh;
-    background: radial-gradient(circle at 50% 20%, #101935, #060a1f);
-    color: #fff;
-    font-family: "Noto Sans KR", sans-serif;
-  }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>밤하늘 별편지 ✨</title>
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+      background: radial-gradient(ellipse at bottom, #0d1b2a 0%, #000 100%);
+      height: 100vh;
+      color: white;
+      font-family: "Pretendard", sans-serif;
+    }
 
-  canvas {
-    position: fixed;
-    inset: 0;
-    z-index: 0;
-  }
+    canvas {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
 
-  .ui {
-    position: relative;
-    z-index: 10;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    text-align: center;
-    gap: 12px;
-    transition: opacity 0.6s;
-  }
+    #inputBox {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(255, 255, 255, 0.9);
+      padding: 20px 25px;
+      border-radius: 20px;
+      text-align: center;
+      color: black;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+    }
 
-  .panel {
-    background: rgba(255, 255, 255, 0.08);
-    padding: 25px 28px;
-    border-radius: 14px;
-    backdrop-filter: blur(8px);
-    box-shadow: 0 4px 18px rgba(0, 0, 0, 0.4);
-    width: min(90%, 400px);
-  }
+    input, textarea, button {
+      margin: 10px 0;
+      padding: 10px;
+      border-radius: 10px;
+      border: none;
+      width: 100%;
+    }
 
-  input, textarea {
-    width: 100%;
-    margin: 6px 0;
-    padding: 10px 12px;
-    border-radius: 8px;
-    border: none;
-    outline: none;
-    background: rgba(255, 255, 255, 0.1);
-    color: #fff;
-    font-size: 15px;
-    resize: none;
-  }
+    button {
+      background: #a5c9ca;
+      cursor: pointer;
+      transition: 0.2s;
+    }
 
-  button {
-    background: linear-gradient(135deg, #ffe1ed, #d7f0ff);
-    color: #1a1a1a;
-    border: none;
-    border-radius: 8px;
-    padding: 10px 18px;
-    cursor: pointer;
-    font-weight: 600;
-    margin-top: 8px;
-  }
+    button:hover {
+      background: #87b5b5;
+    }
 
-  #stage {
-    position: fixed;
-    inset: 0;
-    z-index: 5;
-    display: none;
-  }
+    .star {
+      position: absolute;
+      transform: translate(-50%, -50%);
+      cursor: pointer;
+      animation: twinkle 2s infinite ease-in-out;
+    }
 
-  .star {
-    position: absolute;
-    transform: translate(-50%, -50%) scale(1);
-    cursor: grab;
-    animation: pop 0.6s ease-out;
-    user-select: none;
-  }
-
-  .star:active {
-    cursor: grabbing;
-  }
-
-  @keyframes pop {
-    0% { transform: translate(-50%, -50%) scale(0.2); opacity: 0; filter: blur(3px);}
-    60% { transform: translate(-50%, -50%) scale(1.3); opacity: 1; filter: blur(0);}
-    100% { transform: translate(-50%, -50%) scale(1); }
-  }
-
-  .message-box {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: rgba(255,255,255,0.1);
-    border-radius: 12px;
-    padding: 20px 25px;
-    backdrop-filter: blur(6px);
-    color: #fff;
-    text-align: center;
-    z-index: 30;
-    display: none;
-    width: min(80%, 300px);
-  }
-
-  .message-box h3 {
-    margin: 0 0 8px;
-  }
-
-  .close-btn {
-    margin-top: 12px;
-    background: rgba(255,255,255,0.2);
-    border: none;
-    color: #fff;
-    border-radius: 8px;
-    padding: 6px 12px;
-    cursor: pointer;
-  }
-
-  .add-btn {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background: linear-gradient(135deg, #e7f0ff, #ffe5f7);
-    border: none;
-    border-radius: 50%;
-    width: 55px;
-    height: 55px;
-    font-size: 26px;
-    cursor: pointer;
-    z-index: 15;
-    box-shadow: 0 0 12px rgba(255,255,255,0.5);
-  }
-</style>
+    @keyframes twinkle {
+      0%, 100% { opacity: 0.8; transform: scale(1); }
+      50% { opacity: 1; transform: scale(1.1); }
+    }
+  </style>
 </head>
 <body>
-<canvas id="starsCanvas"></canvas>
-
-<!-- 입력창 -->
-<div class="ui" id="inputUI">
-  <div class="panel">
-    <h2>🌠 밤하늘에 별편지 보내기</h2>
-    <input id="sender" type="text" placeholder="보내는 사람 이름">
-    <textarea id="message" rows="3" maxlength="60" placeholder="별에 담을 내용을 적어보세요 (최대 60자)"></textarea>
-    <button id="sendBtn">별편지 보내기</button>
+  <div id="inputBox">
+    <h2>🌟 밤하늘에 별편지 보내기</h2>
+    <input type="text" id="sender" placeholder="보내는 사람 이름" />
+    <textarea id="message" placeholder="편지 내용을 적어주세요"></textarea>
+    <button id="send">별 띄우기 ✨</button>
   </div>
-</div>
 
-<!-- 별들이 모여있는 공간 -->
-<div id="stage"></div>
+  <canvas id="sky"></canvas>
 
-<!-- 별 클릭 시 보이는 팝업 -->
-<div class="message-box" id="msgBox">
-  <h3 id="msgSender"></h3>
-  <p id="msgContent"></p>
-  <button class="close-btn" id="closeMsg">닫기</button>
-</div>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
+    import { getDatabase, ref, push, onValue } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-database.js";
 
-<!-- 밤하늘에서 추가하기 버튼 -->
-<button class="add-btn" id="addStarBtn" style="display:none;">+</button>
+    const firebaseConfig = {
+      apiKey: "AIzaSyDmuDfVo_NKLLbidliNZ_OW8g-y7qjDq38",
+      authDomain: "star-letter-db6ac.firebaseapp.com",
+      databaseURL: "https://star-letter-db6ac-default-rtdb.firebaseio.com",
+      projectId: "star-letter-db6ac",
+      storageBucket: "star-letter-db6ac.firebasestorage.app",
+      messagingSenderId: "559166601401",
+      appId: "1:559166601401:web:828dba528675aee1a50368"
+    };
 
-<script>
-const canvas = document.getElementById("starsCanvas");
-const ctx = canvas.getContext("2d");
-let w = (canvas.width = innerWidth),
-    h = (canvas.height = innerHeight);
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+    const sky = document.getElementById("sky");
+    const ctx = sky.getContext("2d");
 
-window.addEventListener("resize", () => {
-  w = canvas.width = innerWidth;
-  h = canvas.height = innerHeight;
-});
+    sky.width = window.innerWidth;
+    sky.height = window.innerHeight;
 
-const bgStars = Array.from({ length: 100 }, () => ({
-  x: Math.random() * w,
-  y: Math.random() * h,
-  r: Math.random() * 1.3,
-  a: Math.random(),
-}));
-
-function drawBackground() {
-  ctx.clearRect(0, 0, w, h);
-  for (const s of bgStars) {
-    ctx.beginPath();
-    ctx.fillStyle = `rgba(255,255,255,${0.2 + 0.5 * s.a})`;
-    ctx.arc(s.x, s.y, s.r, 0, Math.PI * 2);
-    ctx.fill();
-    s.a += (Math.random() - 0.5) * 0.03;
-  }
-  requestAnimationFrame(drawBackground);
-}
-drawBackground();
-
-const stage = document.getElementById("stage");
-const inputUI = document.getElementById("inputUI");
-const sendBtn = document.getElementById("sendBtn");
-const senderInput = document.getElementById("sender");
-const messageInput = document.getElementById("message");
-const addStarBtn = document.getElementById("addStarBtn");
-
-let starsData = JSON.parse(localStorage.getItem("starsData") || "[]");
-
-function pastelColor() {
-  const hue = Math.floor(Math.random() * 360);
-  return `hsl(${hue}, 70%, 80%)`;
-}
-
-// ⭐ 둥근 느낌의 별 (큰 사이즈)
-function createStarSVG(color) {
-  const ns = "http://www.w3.org/2000/svg";
-  const svg = document.createElementNS(ns, "svg");
-  svg.setAttribute("width", "110");
-  svg.setAttribute("height", "110");
-  svg.setAttribute("viewBox", "0 0 100 100");
-  const path = document.createElementNS(ns, "path");
-  path.setAttribute(
-    "d",
-    "M50 8 L63 35 Q64 38 68 38 L95 38 Q98 38 96 41 L74 59 Q72 61 73 64 L81 91 Q82 95 78 93 L51 77 Q50 76 49 77 L22 93 Q18 95 19 91 L27 64 Q28 61 26 59 L4 41 Q2 38 5 38 L32 38 Q36 38 37 35 L50 8 Z"
-  );
-  path.setAttribute("fill", color);
-  path.setAttribute("filter", "drop-shadow(0 0 10px " + color + ")");
-  svg.appendChild(path);
-  return svg;
-}
-
-function createStar(x, y, sender, message, color) {
-  const container = document.createElement("div");
-  container.className = "star";
-  container.style.left = x + "px";
-  container.style.top = y + "px";
-  const svg = createStarSVG(color);
-  container.appendChild(svg);
-  container.dataset.sender = sender;
-  container.dataset.message = message;
-  stage.appendChild(container);
-
-  // 별 클릭 → 메시지 보기
-  container.addEventListener("click", (e) => {
-    if (!container.isDragging) showMessage(sender, message);
-  });
-
-  // 별 드래그 가능
-  makeDraggable(container);
-
-  container.animate(
-    [
-      { transform: "translate(-50%, -50%) scale(0.5)", opacity: 0 },
-      { transform: "translate(-50%, -50%) scale(1.3)", opacity: 1 },
-      { transform: "translate(-50%, -50%) scale(1)", opacity: 1 }
-    ],
-    { duration: 1000, easing: "ease-out" }
-  );
-}
-
-function makeDraggable(el) {
-  let offsetX, offsetY;
-  let isDragging = false;
-
-  el.addEventListener("mousedown", startDrag);
-  el.addEventListener("touchstart", startDrag);
-
-  function startDrag(e) {
-    e.preventDefault();
-    el.isDragging = true;
-    isDragging = true;
-    const rect = el.getBoundingClientRect();
-    const clientX = e.touches ? e.touches[0].clientX : e.clientX;
-    const clientY = e.touches ? e.touches[0].clientY : e.clientY;
-    offsetX = clientX - rect.left;
-    offsetY = clientY - rect.top;
-    window.addEventListener("mousemove", drag);
-    window.addEventListener("mouseup", endDrag);
-    window.addEventListener("touchmove", drag);
-    window.addEventListener("touchend", endDrag);
-  }
-
-  function drag(e) {
-    if (!isDragging) return;
-    const clientX = e.touches ? e.touches[0].clientX : e.clientX;
-    const clientY = e.touches ? e.touches[0].clientY : e.clientY;
-    el.style.left = clientX - offsetX + "px";
-    el.style.top = clientY - offsetY + "px";
-  }
-
-  function endDrag() {
-    isDragging = false;
-    el.isDragging = false;
-    window.removeEventListener("mousemove", drag);
-    window.removeEventListener("mouseup", endDrag);
-    window.removeEventListener("touchmove", drag);
-    window.removeEventListener("touchend", endDrag);
-
-    // 저장된 별 위치 업데이트
-    const index = Array.from(stage.children).indexOf(el);
-    if (index >= 0 && starsData[index]) {
-      starsData[index].x = parseFloat(el.style.left);
-      starsData[index].y = parseFloat(el.style.top);
-      localStorage.setItem("starsData", JSON.stringify(starsData));
+    function randomColor() {
+      const colors = ["#FFD6E0", "#F6E6B4", "#D9F8C4", "#AEE1F9", "#E1C6F5"];
+      return colors[Math.floor(Math.random() * colors.length)];
     }
-  }
-}
 
-function showMessage(sender, message) {
-  const box = document.getElementById("msgBox");
-  document.getElementById("msgSender").textContent = sender ? `💌 ${sender}의 편지` : "💫 익명의 편지";
-  document.getElementById("msgContent").textContent = message;
-  box.style.display = "block";
-}
+    // 별 추가
+    document.getElementById("send").addEventListener("click", () => {
+      const sender = document.getElementById("sender").value.trim();
+      const message = document.getElementById("message").value.trim();
 
-document.getElementById("closeMsg").addEventListener("click", () => {
-  document.getElementById("msgBox").style.display = "none";
-});
+      if (!sender || !message) return alert("이름과 내용을 모두 입력해주세요 💌");
 
-function addStar() {
-  const sender = senderInput.value.trim();
-  const message = messageInput.value.trim();
-  if (!message) return alert("내용을 입력해주세요!");
+      const x = Math.random() * sky.width;
+      const y = Math.random() * sky.height;
+      const color = randomColor();
 
-  const color = pastelColor();
-  const x = Math.random() * w * 0.8 + w * 0.1;
-  const y = Math.random() * h * 0.5 + h * 0.1;
+      push(ref(db, "stars"), { sender, message, x, y, color });
 
-  createStar(x, y, sender, message, color);
-  starsData.push({ x, y, sender, message, color });
-  localStorage.setItem("starsData", JSON.stringify(starsData));
-}
+      document.getElementById("sender").value = "";
+      document.getElementById("message").value = "";
+    });
 
-sendBtn.addEventListener("click", () => {
-  addStar();
-  inputUI.style.opacity = "0";
-  setTimeout(() => {
-    inputUI.style.display = "none";
-    stage.style.display = "block";
-    addStarBtn.style.display = "block";
-  }, 600);
-});
+    // 별 불러오기 (실시간 반영)
+    onValue(ref(db, "stars"), (snapshot) => {
+      const stars = snapshot.val();
+      ctx.clearRect(0, 0, sky.width, sky.height);
+      if (!stars) return;
 
-addStarBtn.addEventListener("click", () => {
-  inputUI.style.display = "flex";
-  inputUI.style.opacity = "1";
-  stage.style.display = "none";
-  addStarBtn.style.display = "none";
-  senderInput.value = "";
-  messageInput.value = "";
-});
+      Object.values(stars).forEach(star => {
+        ctx.fillStyle = star.color;
+        drawStar(star.x, star.y, 5, 10, 5);
+      });
+    });
 
-window.addEventListener("load", () => {
-  inputUI.style.display = "flex";
-  stage.style.display = "none";
+    function drawStar(cx, cy, spikes, outerRadius, innerRadius) {
+      let rot = Math.PI / 2 * 3;
+      let x = cx;
+      let y = cy;
+      const step = Math.PI / spikes;
 
-  // 저장된 별 표시
-  starsData.forEach(s => createStar(s.x, s.y, s.sender, s.message, s.color));
-});
-</script>
+      ctx.beginPath();
+      ctx.moveTo(cx, cy - outerRadius);
+      for (let i = 0; i < spikes; i++) {
+        x = cx + Math.cos(rot) * outerRadius;
+        y = cy + Math.sin(rot) * outerRadius;
+        ctx.lineTo(x, y);
+        rot += step;
+
+        x = cx + Math.cos(rot) * innerRadius;
+        y = cy + Math.sin(rot) * innerRadius;
+        ctx.lineTo(x, y);
+        rot += step;
+      }
+      ctx.lineTo(cx, cy - outerRadius);
+      ctx.closePath();
+      ctx.fill();
+    }
+
+    // 별 클릭 이벤트
+    sky.addEventListener("click", (e) => {
+      const x = e.clientX;
+      const y = e.clientY;
+      onValue(ref(db, "stars"), (snapshot) => {
+        const stars = snapshot.val();
+        if (!stars) return;
+        Object.values(stars).forEach(star => {
+          const dx = x - star.x;
+          const dy = y - star.y;
+          if (Math.sqrt(dx * dx + dy * dy) < 15) {
+            alert(`💌 From ${star.sender}\n\n${star.message}`);
+          }
+        });
+      }, { onlyOnce: true });
+    });
+
+  </script>
 </body>
 </html>
