--- a/index.html
+++ b/index.html
@@ -1,82 +1,133 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>밤하늘 별편지 ✨</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>밤하늘 별편지 🌌</title>
   <style>
     body {
       margin: 0;
       overflow: hidden;
-      background: radial-gradient(ellipse at bottom, #0d1b2a 0%, #000 100%);
-      height: 100vh;
-      color: white;
+      background: radial-gradient(circle at bottom, #0b0b24 0%, #000010 80%);
       font-family: "Pretendard", sans-serif;
+      color: white;
+      height: 100vh;
     }
 
-    canvas {
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
-
-    #inputBox {
+    #formContainer {
       position: fixed;
-      top: 50%;
+      top: 20px;
       left: 50%;
-      transform: translate(-50%, -50%);
-      background: rgba(255, 255, 255, 0.9);
-      padding: 20px 25px;
-      border-radius: 20px;
-      text-align: center;
-      color: black;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+      transform: translateX(-50%);
+      background: rgba(255, 255, 255, 0.15);
+      padding: 12px 18px;
+      border-radius: 14px;
+      backdrop-filter: blur(6px);
+      display: flex;
+      gap: 10px;
+      z-index: 10;
     }
 
-    input, textarea, button {
-      margin: 10px 0;
-      padding: 10px;
-      border-radius: 10px;
+    input, textarea {
       border: none;
-      width: 100%;
+      border-radius: 10px;
+      padding: 6px 10px;
+      outline: none;
+    }
+
+    textarea {
+      resize: none;
     }
 
     button {
-      background: #a5c9ca;
+      border: none;
+      background: #ffffffaa;
+      color: #333;
+      padding: 6px 12px;
+      border-radius: 10px;
       cursor: pointer;
       transition: 0.2s;
     }
 
     button:hover {
-      background: #87b5b5;
+      background: #fff;
     }
 
     .star {
       position: absolute;
-      transform: translate(-50%, -50%);
+      width: 28px;
+      height: 28px;
+      clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 
+                         50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
       cursor: pointer;
       animation: twinkle 2s infinite ease-in-out;
     }
 
     @keyframes twinkle {
-      0%, 100% { opacity: 0.8; transform: scale(1); }
-      50% { opacity: 1; transform: scale(1.1); }
+      0%, 100% { opacity: 1; transform: scale(1); }
+      50% { opacity: 0.7; transform: scale(1.2); }
+    }
+
+    #popup {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(8px);
+      border-radius: 18px;
+      padding: 20px;
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      z-index: 20;
+      width: 260px;
+    }
+
+    #popup button {
+      margin-top: 10px;
+      background: #fff;
+      color: #000;
+    }
+
+    #resetButton {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: rgba(255, 80, 80, 0.8);
+      color: white;
+      border: none;
+      border-radius: 12px;
+      padding: 8px 14px;
+      cursor: pointer;
+      z-index: 10;
+    }
+
+    #resetButton:hover {
+      background: rgba(255, 60, 60, 1);
     }
   </style>
 </head>
 <body>
-  <div id="inputBox">
-    <h2>🌟 밤하늘에 별편지 보내기</h2>
-    <input type="text" id="sender" placeholder="보내는 사람 이름" />
-    <textarea id="message" placeholder="편지 내용을 적어주세요"></textarea>
-    <button id="send">별 띄우기 ✨</button>
+  <div id="formContainer">
+    <input type="text" id="name" placeholder="보내는 사람" />
+    <textarea id="message" rows="1" placeholder="별에 담을 편지"></textarea>
+    <button id="addStar">별 보내기</button>
   </div>
 
-  <canvas id="sky"></canvas>
+  <button id="resetButton">🌠 초기화</button>
 
+  <div id="popup">
+    <h3 id="popupName"></h3>
+    <p id="popupMessage"></p>
+    <button id="closePopup">닫기</button>
+  </div>
+
+  <!-- Firebase -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-    import { getDatabase, ref, push, onValue } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-database.js";
+    import { getDatabase, ref, push, onValue, remove } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-database.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyDmuDfVo_NKLLbidliNZ_OW8g-y7qjDq38",
@@ -90,87 +141,75 @@
 
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
-    const sky = document.getElementById("sky");
-    const ctx = sky.getContext("2d");
+    const starsRef = ref(db, "stars");
 
-    sky.width = window.innerWidth;
-    sky.height = window.innerHeight;
+    const addStarBtn = document.getElementById("addStar");
+    const resetBtn = document.getElementById("resetButton");
+    const popup = document.getElementById("popup");
+    const popupName = document.getElementById("popupName");
+    const popupMessage = document.getElementById("popupMessage");
+    const closePopup = document.getElementById("closePopup");
 
-    function randomColor() {
-      const colors = ["#FFD6E0", "#F6E6B4", "#D9F8C4", "#AEE1F9", "#E1C6F5"];
-      return colors[Math.floor(Math.random() * colors.length)];
-    }
+    const colors = ["#AEE6FF", "#E2D2FF", "#FFF4A3", "#FFC4E1"];
 
-    // 별 추가
-    document.getElementById("send").addEventListener("click", () => {
-      const sender = document.getElementById("sender").value.trim();
+    addStarBtn.addEventListener("click", () => {
+      const name = document.getElementById("name").value.trim();
       const message = document.getElementById("message").value.trim();
+      if (!name || !message) return alert("이름과 내용을 모두 입력해주세요!");
 
-      if (!sender || !message) return alert("이름과 내용을 모두 입력해주세요 💌");
+      const x = Math.random() * (window.innerWidth - 40);
+      const y = Math.random() * (window.innerHeight - 40);
+      const color = colors[Math.floor(Math.random() * colors.length)];
 
-      const x = Math.random() * sky.width;
-      const y = Math.random() * sky.height;
-      const color = randomColor();
-
-      push(ref(db, "stars"), { sender, message, x, y, color });
-
-      document.getElementById("sender").value = "";
+      push(starsRef, { name, message, x, y, color });
       document.getElementById("message").value = "";
     });
 
-    // 별 불러오기 (실시간 반영)
-    onValue(ref(db, "stars"), (snapshot) => {
-      const stars = snapshot.val();
-      ctx.clearRect(0, 0, sky.width, sky.height);
-      if (!stars) return;
+    onValue(starsRef, (snapshot) => {
+      document.querySelectorAll(".star").forEach(s => s.remove());
+      snapshot.forEach(child => {
+        const { name, message, x, y, color } = child.val();
+        const star = document.createElement("div");
+        star.className = "star";
+        star.style.left = `${x}px`;
+        star.style.top = `${y}px`;
+        star.style.background = color;
 
-      Object.values(stars).forEach(star => {
-        ctx.fillStyle = star.color;
-        drawStar(star.x, star.y, 5, 10, 5);
+        // 드래그 기능
+        let isDragging = false, offsetX, offsetY;
+        star.addEventListener("mousedown", e => {
+          isDragging = true;
+          offsetX = e.offsetX;
+          offsetY = e.offsetY;
+        });
+        window.addEventListener("mousemove", e => {
+          if (isDragging) {
+            star.style.left = `${e.pageX - offsetX}px`;
+            star.style.top = `${e.pageY - offsetY}px`;
+          }
+        });
+        window.addEventListener("mouseup", () => isDragging = false);
+
+        // 클릭 시 팝업
+        star.addEventListener("click", () => {
+          popupName.textContent = name + "의 별";
+          popupMessage.textContent = message;
+          popup.style.display = "flex";
+        });
+
+        document.body.appendChild(star);
       });
     });
 
-    function drawStar(cx, cy, spikes, outerRadius, innerRadius) {
-      let rot = Math.PI / 2 * 3;
-      let x = cx;
-      let y = cy;
-      const step = Math.PI / spikes;
-
-      ctx.beginPath();
-      ctx.moveTo(cx, cy - outerRadius);
-      for (let i = 0; i < spikes; i++) {
-        x = cx + Math.cos(rot) * outerRadius;
-        y = cy + Math.sin(rot) * outerRadius;
-        ctx.lineTo(x, y);
-        rot += step;
-
-        x = cx + Math.cos(rot) * innerRadius;
-        y = cy + Math.sin(rot) * innerRadius;
-        ctx.lineTo(x, y);
-        rot += step;
-      }
-      ctx.lineTo(cx, cy - outerRadius);
-      ctx.closePath();
-      ctx.fill();
-    }
-
-    // 별 클릭 이벤트
-    sky.addEventListener("click", (e) => {
-      const x = e.clientX;
-      const y = e.clientY;
-      onValue(ref(db, "stars"), (snapshot) => {
-        const stars = snapshot.val();
-        if (!stars) return;
-        Object.values(stars).forEach(star => {
-          const dx = x - star.x;
-          const dy = y - star.y;
-          if (Math.sqrt(dx * dx + dy * dy) < 15) {
-            alert(`💌 From ${star.sender}\n\n${star.message}`);
-          }
-        });
-      }, { onlyOnce: true });
+    closePopup.addEventListener("click", () => {
+      popup.style.display = "none";
     });
 
+    resetBtn.addEventListener("click", () => {
+      if (confirm("정말 모든 별을 삭제하시겠어요? 🌌")) {
+        remove(starsRef);
+      }
+    });
   </script>
 </body>
 </html>
