--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       margin: 0;
       background: radial-gradient(circle at center, #0b0c2a, #050515);
       overflow: hidden;
-      font-family: "Pretendard", sans-serif;
+      font-family: "Pretendard", sans-serif;!important
     }
 
     /* 별 스타일 */
