--- a/index.html
+++ b/index.html
@@ -1,209 +1,152 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>🌟 밤하늘 별편지</title>
-  <style>
-    body {
-      margin: 0;
-      background: radial-gradient(circle at center, #0b0c2a, #050515);
-      overflow: hidden;
-      font-family: "Pretendard", sans-serif;!important
-    }
-
-    /* 별 스타일 */
-    .star {
-      position: absolute;
-      width: 28px;
-      height: 28px;
-      border-radius: 50%;
-      cursor: grab;
-      animation: twinkle 2s infinite ease-in-out;
-      box-shadow: 0 0 15px rgba(255,255,255,0.6);
-    }
-
-    @keyframes twinkle {
-      0%, 100% { transform: scale(1); opacity: 0.8; }
-      50% { transform: scale(1.3); opacity: 1; }
-    }
-
-    /* 입력 팝업 */
-    #popup {
-      position: fixed;
-      top: 50%; left: 50%;
-      transform: translate(-50%, -50%);
-      background: rgba(255,255,255,0.1);
-      backdrop-filter: blur(10px);
-      border-radius: 16px;
-      padding: 30px 40px;
-      color: white;
-      text-align: center;
-      box-shadow: 0 0 20px rgba(0,0,0,0.4);
-    }
-
-    input, textarea {
-      width: 100%;
-      margin: 8px 0;
-      padding: 10px;
-      border-radius: 8px;
-      border: none;
-      outline: none;
-      font-size: 14px;
-    }
-
-    button {
-      margin-top: 10px;
-      padding: 10px 16px;
-      border-radius: 8px;
-      border: none;
-      background: #7b6ef6;
-      color: white;
-      cursor: pointer;
-      transition: 0.2s;
-    }
-
-    button:hover {
-      background: #988ff9;
-    }
-
-    /* 편지 보기 팝업 */
-    #messageBox {
-      display: none;
-      position: fixed;
-      top: 50%; left: 50%;
-      transform: translate(-50%, -50%);
-      background: rgba(255,255,255,0.15);
-      backdrop-filter: blur(10px);
-      padding: 20px 30px;
-      border-radius: 16px;
-      text-align: center;
-      color: white;
-      min-width: 250px;
-    }
-
-    /* 초기화 버튼 */
-    #resetBtn {
-      position: fixed;
-      top: 16px;
-      right: 16px;
-      background: rgba(255,255,255,0.1);
-      color: white;
-      border: none;
-      border-radius: 8px;
-      padding: 8px 12px;
-      cursor: pointer;
-    }
-
-    #resetBtn:hover {
-      background: rgba(255,255,255,0.3);
-    }
-  </style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>🌌 밤하늘 별편지 공유</title>
+<style>
+  body {
+    margin:0; overflow:hidden; height:100vh; 
+    background: radial-gradient(circle at 50% 20%, #101935, #060a1f) !important; 
+    color:#fff !important; 
+    font-family:"Noto Sans KR", sans-serif !important;
+  }
+  canvas { position: fixed; inset:0; z-index:0; }
+  .ui { position: relative; z-index: 10; display:flex; flex-direction:column; align-items:center; justify-content:center; height:100vh; text-align:center; gap:12px; transition:opacity 0.6s; }
+  .panel { background: rgba(255,255,255,0.08) !important; padding:25px 28px; border-radius:14px; backdrop-filter:blur(8px); box-shadow:0 4px 18px rgba(0,0,0,0.4); width:min(90%,400px);}
+  input,textarea { width:100%; margin:6px 0; padding:10px 12px; border-radius:8px; border:none; outline:none; background:rgba(255,255,255,0.1); color:#fff !important; font-size:15px; resize:none; }
+  button { border:none; cursor:pointer; font-weight:600; }
+  #stage { position:fixed; inset:0; z-index:5; display:none; }
+  .star { position:absolute; transform:translate(-50%,-50%) scale(1); cursor:grab; animation:pop 0.6s ease-out; user-select:none; }
+  .star:active { cursor:grabbing; }
+  @keyframes pop {0% { transform: translate(-50%, -50%) scale(0.2); opacity:0; filter:blur(3px);} 60% { transform: translate(-50%, -50%) scale(1.3); opacity:1; filter:blur(0);} 100% { transform: translate(-50%, -50%) scale(1); } }
+  .message-box { position: fixed; top:50%; left:50%; transform:translate(-50%,-50%); background: rgba(255,255,255,0.1); border-radius:12px; padding:20px 25px; backdrop-filter:blur(6px); color:#fff !important; text-align:center; z-index:30; display:none; width:min(80%,300px);}
+  .message-box h3 { margin:0 0 8px; }
+  .close-btn { margin-top:12px; background:rgba(255,255,255,0.2); border:none; color:#fff !important; border-radius:8px; padding:6px 12px; cursor:pointer;}
+  .add-btn { position: fixed; bottom:20px; right:20px; background: linear-gradient(135deg, #e7f0ff,#ffe5f7); border-radius:50%; width:55px; height:55px; font-size:26px; z-index:15; box-shadow:0 0 12px rgba(255,255,255,0.5); }
+  #resetStarsBtn { position: fixed; bottom:90px; right:20px; background: linear-gradient(135deg,#ffb3b3,#ffe5b3); border-radius:50%; width:55px; height:55px; font-size:26px; z-index:15; box-shadow:0 0 12px rgba(255,255,255,0.5); }
+</style>
 </head>
 <body>
+<canvas id="starsCanvas"></canvas>
 
-  <div id="popup">
-    <h2>🌟 밤하늘에 별편지 보내기</h2>
-    <input type="text" id="name" placeholder="보내는 사람 이름">
+<div class="ui" id="inputUI">
+  <div class="panel">
+    <h2>🌠 밤하늘에 별편지 보내기</h2>
+    <input id="sender" type="text" placeholder="보내는 사람 이름">
     <textarea id="message" rows="3" maxlength="60" placeholder="별에 담을 내용을 적어보세요 (최대 60자)"></textarea>
-    <button id="sendBtn">별편지 보내기</button>
+    <button id="sendBtn" style="background: linear-gradient(135deg, #ffe1ed, #d7f0ff); color:#1a1a1a; padding:10px 18px; border-radius:8px;">별편지 보내기</button>
   </div>
+</div>
 
-  <div id="messageBox"></div>
-  <button id="resetBtn">🗑 전체 초기화</button>
+<div id="stage"></div>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-    import { getDatabase, ref, push, onValue, set, remove, update } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-database.js";
+<div class="message-box" id="msgBox">
+  <h3 id="msgSender"></h3>
+  <p id="msgContent"></p>
+  <button class="close-btn" id="closeMsg">닫기</button>
+</div>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyDmuDfVo_NKLLbidliNZ_OW8g-y7qjDq38",
-      authDomain: "star-letter-db6ac.firebaseapp.com",
-      databaseURL: "https://star-letter-db6ac-default-rtdb.firebaseio.com",
-      projectId: "star-letter-db6ac",
-      storageBucket: "star-letter-db6ac.firebasestorage.app",
-      messagingSenderId: "559166601401",
-      appId: "1:559166601401:web:828dba528675aee1a50368"
-    };
+<button class="add-btn" id="addStarBtn" style="display:none;">+</button>
+<button id="resetStarsBtn">🗑️</button>
 
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
-    const starsRef = ref(db, "stars");
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
+import { getDatabase, ref, set, onValue, remove, update, push } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-database.js";
 
-    const popup = document.getElementById("popup");
-    const sendBtn = document.getElementById("sendBtn");
-    const resetBtn = document.getElementById("resetBtn");
-    const messageBox = document.getElementById("messageBox");
+// Firebase 정보
+const firebaseConfig = {
+  apiKey: "AIzaSyChx8ygzVtU8wzyIWWHbshm6VoKNhy-IwI",
+  authDomain: "star-f63a5.firebaseapp.com",
+  databaseURL: "https://star-f63a5-default-rtdb.firebaseio.com",
+  projectId: "star-f63a5",
+  storageBucket: "star-f63a5.firebasestorage.app",
+  messagingSenderId: "333175648309",
+  appId: "1:333175648309:web:bbdecc415f9f907beb417c"
+};
+const app = initializeApp(firebaseConfig);
+const db = getDatabase(app);
 
-    const pastelColors = ["#BFDFFF", "#FFD6E0", "#D9C6FF", "#FFF7B0"];
+// 배경 캔버스
+const canvas = document.getElementById("starsCanvas");
+const ctx = canvas.getContext("2d");
+let w = canvas.width = innerWidth;
+let h = canvas.height = innerHeight;
+window.addEventListener("resize", ()=>{ w=canvas.width=innerWidth; h=canvas.height=innerHeight; });
+const bgStars = Array.from({length:100},()=>({x:Math.random()*w, y:Math.random()*h, r:Math.random()*1.3, a:Math.random()}));
+function drawBackground(){ ctx.clearRect(0,0,w,h); for(const s of bgStars){ ctx.beginPath(); ctx.fillStyle=`rgba(255,255,255,${0.2+0.5*s.a})`; ctx.arc(s.x,s.y,s.r,0,Math.PI*2); ctx.fill(); s.a+=(Math.random()-0.5)*0.03;} requestAnimationFrame(drawBackground);}
+drawBackground();
 
-    sendBtn.addEventListener("click", () => {
-      const name = document.getElementById("name").value.trim();
-      const message = document.getElementById("message").value.trim();
-      if (!name || !message) return alert("이름과 내용을 모두 입력해주세요!");
+// DOM
+const stage = document.getElementById("stage");
+const inputUI = document.getElementById("inputUI");
+const sendBtn = document.getElementById("sendBtn");
+const senderInput = document.getElementById("sender");
+const messageInput = document.getElementById("message");
+const addStarBtn = document.getElementById("addStarBtn");
+const resetStarsBtn = document.getElementById("resetStarsBtn");
 
-      const x = Math.random() * window.innerWidth * 0.8;
-      const y = Math.random() * window.innerHeight * 0.8;
-      const color = pastelColors[Math.floor(Math.random() * pastelColors.length)];
+// 색상
+function pastelColor(){ const hue=Math.floor(Math.random()*360); return `hsl(${hue},70%,80%)`; }
+function createStarSVG(color){ 
+  const ns="http://www.w3.org/2000/svg"; const svg=document.createElementNS(ns,"svg"); svg.setAttribute("width","110"); svg.setAttribute("height","110"); svg.setAttribute("viewBox","0 0 100 100");
+  const path=document.createElementNS(ns,"path"); path.setAttribute("d","M50 8 L63 35 Q64 38 68 38 L95 38 Q98 38 96 41 L74 59 Q72 61 73 64 L81 91 Q82 95 78 93 L51 77 Q50 76 49 77 L22 93 Q18 95 19 91 L27 64 Q28 61 26 59 L4 41 Q2 38 5 38 L32 38 Q36 38 37 35 L50 8 Z");
+  path.setAttribute("fill",color); path.setAttribute("filter","drop-shadow(0 0 10px "+color+")"); svg.appendChild(path); return svg;
+}
 
-      push(starsRef, { name, message, x, y, color });
-      popup.style.display = "none";
-    });
+function createStar(x,y,sender,message,color,id){
+  const container=document.createElement("div"); container.className="star"; container.style.left=x+"px"; container.style.top=y+"px"; 
+  const svg=createStarSVG(color); container.appendChild(svg); container.dataset.sender=sender; container.dataset.message=message; container.dataset.id=id;
+  stage.appendChild(container); container.addEventListener("click",()=>{if(!container.isDragging) showMessage(sender,message);}); makeDraggable(container);
+  container.animate([{transform:"translate(-50%,-50%) scale(0.5)",opacity:0},{transform:"translate(-50%,-50%) scale(1.3)",opacity:1},{transform:"translate(-50%,-50%) scale(1)",opacity:1}],{duration:1000,easing:"ease-out"});
+}
 
-    // 별 생성
-    onValue(starsRef, (snapshot) => {
-      document.querySelectorAll(".star").forEach(el => el.remove());
-      snapshot.forEach(child => {
-        const star = document.createElement("div");
-        const data = child.val();
-        star.classList.add("star");
-        star.style.background = data.color;
-        star.style.left = data.x + "px";
-        star.style.top = data.y + "px";
+function makeDraggable(el){
+  let offsetX, offsetY, isDragging=false;
+  el.addEventListener("mousedown",startDrag); el.addEventListener("touchstart",startDrag);
+  function startDrag(e){ e.preventDefault(); el.isDragging=true; isDragging=true;
+    const rect=el.getBoundingClientRect();
+    const clientX=e.touches? e.touches[0].clientX:e.clientX;
+    const clientY=e.touches? e.touches[0].clientY:e.clientY;
+    offsetX=clientX-rect.left; offsetY=clientY-rect.top;
+    window.addEventListener("mousemove",drag); window.addEventListener("mouseup",endDrag);
+    window.addEventListener("touchmove",drag); window.addEventListener("touchend",endDrag);
+  }
+  function drag(e){ if(!isDragging) return;
+    const clientX=e.touches? e.touches[0].clientX:e.clientX;
+    const clientY=e.touches? e.touches[0].clientY:e.clientY;
+    el.style.left=clientX-offsetX+"px"; el.style.top=clientY-offsetY+"px";
+  }
+  function endDrag(){ isDragging=false; el.isDragging=false;
+    window.removeEventListener("mousemove",drag); window.removeEventListener("mouseup",endDrag);
+    window.removeEventListener("touchmove",drag); window.removeEventListener("touchend",endDrag);
+    const id=el.dataset.id;
+    if(id) update(ref(db,'stars/'+id),{x:parseFloat(el.style.left),y:parseFloat(el.style.top)});
+  }
+}
 
-        // 클릭 시 메시지 보기
-        star.addEventListener("click", () => {
-          messageBox.innerHTML = `<h4>⭐ ${data.name}</h4><p>${data.message}</p>`;
-          messageBox.style.display = "block";
-          setTimeout(() => (messageBox.style.display = "none"), 4000);
-        });
+function showMessage(sender,message){ const box=document.getElementById("msgBox"); document.getElementById("msgSender").textContent=sender?`💌 ${sender}의 편지`:"💫 익명의 편지"; document.getElementById("msgContent").textContent=message; box.style.display="block";}
+document.getElementById("closeMsg").addEventListener("click",()=>{document.getElementById("msgBox").style.display="none";});
 
-        // 드래그 기능
-        let offsetX, offsetY, isDragging = false;
-        star.addEventListener("mousedown", (e) => {
-          isDragging = true;
-          offsetX = e.offsetX;
-          offsetY = e.offsetY;
-          star.style.cursor = "grabbing";
-        });
-        document.addEventListener("mousemove", (e) => {
-          if (!isDragging) return;
-          const newX = e.pageX - offsetX;
-          const newY = e.pageY - offsetY;
-          star.style.left = newX + "px";
-          star.style.top = newY + "px";
-        });
-        document.addEventListener("mouseup", () => {
-          if (isDragging) {
-            update(ref(db, "stars/" + child.key), {
-              x: parseFloat(star.style.left),
-              y: parseFloat(star.style.top)
-            });
-          }
-          isDragging = false;
-          star.style.cursor = "grab";
-        });
+function addStar(){ const sender=senderInput.value.trim(); const message=messageInput.value.trim(); if(!message) return alert("내용을 입력해주세요!"); const color=pastelColor(); const x=Math.random()*w*0.8+w*0.1; const y=Math.random()*h*0.5+h*0.1; const newStarRef=push(ref(db,'stars')); set(newStarRef,{x,y,sender,message,color});}
 
-        document.body.appendChild(star);
-      });
-    });
+resetStarsBtn.addEventListener("click",()=>{ if(confirm("정말 모든 별을 삭제하시겠습니까? 이 작업은 되돌릴 수 없습니다.")){ remove(ref(db,'stars')); stage.innerHTML=""; }});
 
-    // 전체 초기화
-    resetBtn.addEventListener("click", () => {
-      if (confirm("정말 모든 별을 삭제할까요? 🌠")) {
-        remove(starsRef);
-        alert("모든 별이 사라졌어요 ✨");
-      }
-    });
-  </script>
+sendBtn.addEventListener("click",()=>{
+  addStar(); inputUI.style.opacity="0"; setTimeout(()=>{ inputUI.style.display="none"; stage.style.display="block"; addStarBtn.style.display="block"; },600);
+});
+
+addStarBtn.addEventListener("click",()=>{
+  inputUI.style.display="flex"; inputUI.style.opacity="1"; stage.style.display="none"; addStarBtn.style.display="none"; senderInput.value=""; messageInput.value="";
+});
+
+onValue(ref(db,'stars'), snapshot=>{
+  stage.innerHTML="";
+  const data=snapshot.val();
+  if(data) Object.entries(data).forEach(([id,s])=>createStar(s.x,s.y,s.sender,s.message,s.color,id));
+});
+
+window.addEventListener("load",()=>{ inputUI.style.display="flex"; stage.style.display="none";});
+</script>
 </body>
 </html>
